fixed the text overflow on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -956,8 +956,22 @@ body {
   background-color: rgb(76 143 113 / var(--tw-bg-opacity));
 }
 
+@media not all and (min-width: 768px) {
+  .max-md\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 1024px) {
+  .lg\:h-5\/6 {
+    height: 83.333333%;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-5\/6 {
+    width: 83.333333%;
   }
 }
